# BB3D

./: CMakeLists.txt  OCC.h  README.md  make.sh
src/: make_blade.cpp
